# daa-assignment-1

./: .clang-tidy  .gitignore  CMakeLists.txt  Makefile  README.md  build.sh  cmake.sh  compile_commands.json  dcel.cc  dcel.h  dcel.hh  decomp.cc  decomp.hh  group_members.txt  image.html  input1.txt  main.cpp  output.csv  report.html  report.org  test.cpp  test.sh  utils.cc  utils.hh
Doxygen/html/: annotated.html  annotated_dup.js  class_dcel_fixture-members.html  class_dcel_fixture.html  class_dcel_fixture.js  class_edge-members.html  class_edge.html  class_edge.js  class_face-members.html  class_face.html  class_face.js  class_point-members.html  class_point.html  class_point.js  class_polygon-members.html  class_polygon.html  class_polygon.js  class_vertex-members.html  class_vertex.html  class_vertex.js  classes.html  dbg_8hh_source.html  dcel_8hh_source.html  dcel__fixture_8hh_source.html  decomp_8hh_source.html  dir_13e138d54eb8818da29c3992edef070a.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_cbdb8362360e11eafe2fa3bc74cf0ffd.html  doxygen.css  functions.html  functions_func.html  functions_vars.html  hierarchy.html  hierarchy.js  index.html  menudata.js  merge_8hh_source.html  navtreedata.js  navtreeindex0.js  struct_decomp_data-members.html  (+4 more)
Doxygen/latex/: annotated.tex  class_dcel_fixture.tex  class_edge.tex  class_face.tex  class_point.tex  class_polygon.tex  class_vertex.tex  dbg_8hh_source.tex  dcel_8hh_source.tex  dcel__fixture_8hh_source.tex  decomp_8hh_source.tex  dir_13e138d54eb8818da29c3992edef070a.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_cbdb8362360e11eafe2fa3bc74cf0ffd.tex  hierarchy.tex  merge_8hh_source.tex  refman.tex  struct_decomp_data.tex  typedefs_8hh_source.tex  utils_8hh_source.tex
benchmarks/: benchmark.csv
docs/: annotated.html  classEdge-members.html  classEdge.html  classEdge__coll__graph.map  classEdge__coll__graph.md5  classFace-members.html  classFace.html  classFace__coll__graph.map  classFace__coll__graph.md5  classPoint-members.html  classPoint.html  classPolygon-members.html  classPolygon.html  classPolygon__coll__graph.map  classPolygon__coll__graph.md5  classVertex-members.html  classVertex.html  classVertex__coll__graph.map  classVertex__coll__graph.md5  classes.html  dcel_8cc.html  dcel_8cc__incl.map  dcel_8cc__incl.md5  dcel_8hh_source.html  decomp_8cc.html  decomp_8cc__incl.map  decomp_8cc__incl.md5  decomp_8hh_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_func.html  graph_legend.html  index.html  merge_8cc.html  merge_8cc__incl.map  merge_8cc__incl.md5  (+8 more)
docs/search/: all_0.js  all_11.js  all_2.js  all_3.js  all_4.js  all_6.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_2.js  classes_3.js  files_0.js  files_1.js  files_2.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  (+13 more)
material/: merging.org
report/: benchmark.csv  report.html  report.org  style.css
scripts/: benchmark.sh  run.sh  test_all.sh
src/: dbg.h  dbg.hh  dcel.cc  dcel.hh  decomp.cc  decomp.hh  main.cpp  merge.cc  merge.hh  typedefs.hh  utils.cc  utils.hh
test/: dcel_fixture.cc  dcel_fixture.hh  test_dcel.cc
test_polygons/: algeria.txt  comb.txt  greenland.txt  hand.txt  i18.txt  india.txt  poly2.txt  romania.txt  snake.txt  star.txt  test2.txt  test_polygon1.txt
utils/: benchmark.cc  vis.py  visualize.cc
(+21 files in other folders)
